review 5: max-width of about__text for correct text wrapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -256,6 +256,7 @@
     gap: 25px;
     font-size: 1.25rem;
     font-weight: 400;
+    max-width: 688px;
 }
 
 .about__text p {
